--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,29 @@
 <div class="container">
-  <h3>
-    Payment Form
-  </h3>
+  <h3>Payment Form</h3>
   <div class="row">
     <div class="form-group col">
       <label for="">Payee Name</label>
-      <input class="form-control" (input)="onNameChange($event.target.value)" type="text">
+      <input
+        class="form-control"
+        (input)="onNameChange($event.target.value)"
+        type="text"
+      />
     </div>
     <div class="col">
       <label><b>Name</b></label>
       <div>
-        {{ name | titlecase}}
+        {{ name | titlecase }}
       </div>
     </div>
   </div>
   <div class="row">
     <div class="form-group col">
       <label for="">Payment Date</label>
-      <input class="form-control" (input)="onDateChange($event.target.value)" type="date">
+      <input
+        class="form-control"
+        (input)="onDateChange($event.target.value)"
+        type="date"
+      />
     </div>
     <div class="col">
       <label><b>Payment Date</b></label>
@@ -26,5 +32,49 @@
       </div>
     </div>
   </div>
-
+  <div class="row">
+    <div class="form-group col">
+      <label for="">Payment Amount</label>
+      <input
+        class="form-control"
+        (input)="onAmountChange($event.target.value)"
+      />
+    </div>
+    <div class="col">
+      <label><b>Payment Amount</b></label>
+      <div>
+        {{ amount | currency }}
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="form-group col">
+      <label for="">Height</label>
+      <input
+        class="form-control"
+        (input)="onHeightChange($event.target.value)"
+      />
+    </div>
+    <div class="col">
+      <label><b>Height</b></label>
+      <div>
+        {{ height | number: "1.1-3" }}
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="form-group col">
+      <label for="">Miles</label>
+      <input
+        class="form-control"
+        (input)="onMilesChange($event.target.value)"
+      />
+    </div>
+    <div class="col">
+      <label><b>Kilometers</b></label>
+      <div>
+        {{ miles | convert: "cm" | number: "1.0-2" }}
+      </div>
+    </div>
+  </div>
 </div>
